--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "Lena Lushnikova",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.25.8",
+    "sequelize-cli": "^6.5.2"
   },
   "devDependencies": {
     "eslint": "^8.28.0",
