--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Маленькое приложение с авторизацией, шифрованием паролей и защищёнными роутами.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js --ext js,json,jsx"
   },
   "keywords": [],
   "author": "Lena Lushnikova",
@@ -23,6 +24,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.11",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "nodemon": "^2.0.20"
   }
 }
