--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   "author": "Lena Lushnikova",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/register": "^7.18.9",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sequelize": "^6.25.8",
     "sequelize-cli": "^6.5.2"
   },
