--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "nodemon index.js --ext js,json,jsx"
   },
   "keywords": [],
-  "author": "Lena Lushnikova",
+  "contributors": [
+    "Lena Lushnikova"
+  ],
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.20.5",
